# wormbase-qwen-memory

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SUBMISSION.md  pyproject.toml
data/demo/: session-1.csv  session-2.csv  session-3.csv
docs/: benchmarks.md  changelog.md  decisions.md  demo-spec.md  eval.md  governance.md  known_issues.md  loop-engineering.md  product-sprint.md  research-analyst.md  vision-bmc-eval.md
infra/: claude_desktop_config.json
infra/aliyun/: Dockerfile  README.md  deploy.sh
results/: consistency.json
scripts/: answer_jsonl.py  eval_consistency.py  plot_curve.py  plot_reliability.py  prove_it.py  run_demo.py  seed_ledger.py  smoke_dashscope.py  triage_demo.py  tune_escalation.py
src/wormbase_memory/: __init__.py  agent.py  analysis.py  autoresearch.py  cli.py  demo.py  executor.py  hashchain.py  inference.py  ledger.py  mcp_server.py  memory_api.py  narrative.py  planner.py  preferences.py  profiler.py  recall.py  reuse_guard.py  simulate.py  triage.py
src/wormbase_memory/eval/: __init__.py  consistency.py  curve.py  datasets.py  escalation.py  reliability.py
tests/: test_agent.py  test_analysis.py  test_eval.py  test_ledger.py  test_ledger_threads.py  test_loop_evals.py  test_memory_api.py  test_memory_governance.py  test_receipts.py  test_reuse_guard.py  test_selfimprove.py  test_triage.py
ui/: app.py
