[project]
name = "wormbase-qwen-memory"
version = "0.1.0"
description = "A data-operations MemoryAgent whose memory is a hash-chained ledger — reproducible KPIs across sessions, powered by Qwen Cloud."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openai>=1.40",        # DashScope OpenAI-compatible client (Qwen Cloud)
]

[project.optional-dependencies]
ui = ["streamlit>=1.36", "plotly>=5.20"]
dev = ["pytest>=8.0"]

[project.scripts]
wbm-demo = "wormbase_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wormbase_memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
